--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@rollup/plugin-json": "^6.0.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^4.0.0",
+    "@vitejs/plugin-react": "^4.0.4",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
